Убрала отступы кнопок в dimens

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,10 +15,10 @@
         android:id="@+id/button_1"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/button_margins"
+        android:layout_marginTop="@dimen/button_margins"
+        android:layout_marginEnd="@dimen/button_margins"
+        android:layout_marginBottom="@dimen/button_margins"
         android:text="@string/_1"
         android:textSize="@dimen/button_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,10 +30,10 @@
         android:id="@+id/button_2"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/button_margins"
+        android:layout_marginTop="@dimen/button_margins"
+        android:layout_marginEnd="@dimen/button_margins"
+        android:layout_marginBottom="@dimen/button_margins"
         android:text="@string/_2"
         android:textSize="@dimen/button_text"
         app:layout_constraintStart_toEndOf="@id/button_1"
@@ -43,10 +43,10 @@
         android:id="@+id/button_3"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/button_margins"
+        android:layout_marginTop="@dimen/button_margins"
+        android:layout_marginEnd="@dimen/button_margins"
+        android:layout_marginBottom="@dimen/button_margins"
         android:text="@string/_3"
         android:textSize="@dimen/button_text"
         app:layout_constraintStart_toEndOf="@id/button_2"
@@ -56,10 +56,10 @@
         android:id="@+id/button_4"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/button_margins"
+        android:layout_marginTop="@dimen/button_margins"
+        android:layout_marginEnd="@dimen/button_margins"
+        android:layout_marginBottom="@dimen/button_margins"
         android:text="@string/_4"
         android:textSize="@dimen/button_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,10 +69,10 @@
         android:id="@+id/button_5"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/button_margins"
+        android:layout_marginTop="@dimen/button_margins"
+        android:layout_marginEnd="@dimen/button_margins"
+        android:layout_marginBottom="@dimen/button_margins"
         android:text="@string/_5"
         android:textSize="@dimen/button_text"
         app:layout_constraintStart_toEndOf="@id/button_4"
@@ -82,10 +82,10 @@
         android:id="@+id/button_6"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/button_margins"
+        android:layout_marginTop="@dimen/button_margins"
+        android:layout_marginEnd="@dimen/button_margins"
+        android:layout_marginBottom="@dimen/button_margins"
         android:text="@string/_6"
         android:textSize="@dimen/button_text"
         app:layout_constraintStart_toEndOf="@id/button_5"
@@ -95,10 +95,10 @@
         android:id="@+id/button_7"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/button_margins"
+        android:layout_marginTop="@dimen/button_margins"
+        android:layout_marginEnd="@dimen/button_margins"
+        android:layout_marginBottom="@dimen/button_margins"
         android:text="@string/_7"
         android:textSize="@dimen/button_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,10 +108,10 @@
         android:id="@+id/button_8"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/button_margins"
+        android:layout_marginTop="@dimen/button_margins"
+        android:layout_marginEnd="@dimen/button_margins"
+        android:layout_marginBottom="@dimen/button_margins"
         android:text="@string/_8"
         android:textSize="@dimen/button_text"
         app:layout_constraintStart_toEndOf="@id/button_7"
@@ -121,10 +121,10 @@
         android:id="@+id/button_9"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/button_margins"
+        android:layout_marginTop="@dimen/button_margins"
+        android:layout_marginEnd="@dimen/button_margins"
+        android:layout_marginBottom="@dimen/button_margins"
         android:text="@string/_9"
         android:textSize="@dimen/button_text"
         app:layout_constraintStart_toEndOf="@id/button_8"
@@ -134,10 +134,10 @@
         android:id="@+id/button_0"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/button_margins"
+        android:layout_marginTop="@dimen/button_margins"
+        android:layout_marginEnd="@dimen/button_margins"
+        android:layout_marginBottom="@dimen/button_margins"
         android:text="@string/_0"
         android:textSize="@dimen/button_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -147,10 +147,10 @@
         android:id="@+id/button_comma"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/button_margins"
+        android:layout_marginTop="@dimen/button_margins"
+        android:layout_marginEnd="@dimen/button_margins"
+        android:layout_marginBottom="@dimen/button_margins"
         android:text="@string/_comma"
         android:textSize="@dimen/button_text"
         app:layout_constraintStart_toEndOf="@id/button_0"
@@ -160,10 +160,10 @@
         android:id="@+id/button_equal"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/button_margins"
+        android:layout_marginTop="@dimen/button_margins"
+        android:layout_marginEnd="@dimen/button_margins"
+        android:layout_marginBottom="@dimen/button_margins"
         android:text="@string/_equal"
         android:textSize="@dimen/button_text"
         app:layout_constraintStart_toEndOf="@id/button_comma"
@@ -173,10 +173,10 @@
         android:id="@+id/button_divide"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/button_action_margins"
+        android:layout_marginTop="@dimen/button_action_margins"
+        android:layout_marginEnd="@dimen/button_action_margins"
+        android:layout_marginBottom="@dimen/button_action_margins"
         android:text="@string/_divide"
         android:textSize="@dimen/button_action"
         app:layout_constraintEnd_toEndOf="parent"
@@ -186,10 +186,10 @@
         android:id="@+id/button_multiply"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/button_action_margins"
+        android:layout_marginTop="@dimen/button_action_margins"
+        android:layout_marginEnd="@dimen/button_action_margins"
+        android:layout_marginBottom="@dimen/button_action_margins"
         android:text="@string/_multiply"
         android:textSize="@dimen/button_action"
         app:layout_constraintEnd_toEndOf="parent"
@@ -199,10 +199,10 @@
         android:id="@+id/button_minus"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/button_action_margins"
+        android:layout_marginTop="@dimen/button_action_margins"
+        android:layout_marginEnd="@dimen/button_action_margins"
+        android:layout_marginBottom="@dimen/button_action_margins"
         android:text="@string/_minus"
         android:textSize="@dimen/button_action"
         app:layout_constraintEnd_toEndOf="parent"
@@ -212,10 +212,10 @@
         android:id="@+id/button_plus"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/button_action_margins"
+        android:layout_marginTop="@dimen/button_action_margins"
+        android:layout_marginEnd="@dimen/button_action_margins"
+        android:layout_marginBottom="@dimen/button_action_margins"
         android:text="@string/_plus"
         android:textSize="@dimen/button_action"
         app:layout_constraintEnd_toEndOf="parent"
@@ -225,10 +225,10 @@
         android:id="@+id/button_backspace"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/button_action_margins"
+        android:layout_marginTop="@dimen/button_action_margins"
+        android:layout_marginEnd="@dimen/button_action_margins"
+        android:layout_marginBottom="@dimen/button_action_margins"
         android:text="@string/_backspace"
         android:textSize="@dimen/button_action"
         app:layout_constraintEnd_toEndOf="parent"
