--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="button_text">50sp</dimen>
-    <dimen name="button_action">35sp</dimen>
+    <dimen name="button_text">40sp</dimen>
+    <dimen name="button_action">28sp</dimen>
+    <dimen name="name_size">18</dimen>
+    <dimen name="button_margins">8dp</dimen>
+    <dimen name="button_action_margins">8dp</dimen>
 </resources>
