Добавила текстовое поле

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,17 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.3"/>
 
+    <TextView
+        android:id="@+id/textArea"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/textArea_text"
+        android:layout_marginStart="@dimen/button_margins"
+        android:layout_marginTop="@dimen/button_margins"
+        android:layout_marginEnd="@dimen/button_margins"
+        android:layout_marginBottom="@dimen/text_bottom_margin"
+        app:layout_constraintBottom_toBottomOf="@id/guideline" />
+
     <Button
         android:id="@+id/button_1"
         android:layout_height="wrap_content"
