--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="name_size">18</dimen>
     <dimen name="button_margins">8dp</dimen>
     <dimen name="button_action_margins">8dp</dimen>
+    <dimen name="textArea_text">40sp</dimen>
+    <dimen name="text_bottom_margin">18dp</dimen>
 </resources>
