Добавлен объект для сохранения и восстановления информации

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:layout_marginTop="@dimen/button_margins"
         android:layout_marginEnd="@dimen/button_margins"
         android:layout_marginBottom="@dimen/text_bottom_margin"
+        android:background="@color/purple_200"
         app:layout_constraintBottom_toBottomOf="@id/guideline" />
 
     <Button
