--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -36,4 +36,15 @@
         <item name="android:layout_marginBottom">@dimen/button_action_margins</item>
     </style>
 
+    <style name="ButtonSettingsStyle" parent="Theme.Calc">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:textColor">#B19646</item>
+        <item name="android:textSize">@dimen/button_action</item>
+        <item name="android:layout_marginStart">@dimen/button_action_margins</item>
+        <item name="android:layout_marginTop">@dimen/button_action_margins</item>
+        <item name="android:layout_marginEnd">@dimen/button_action_margins</item>
+        <item name="android:layout_marginBottom">@dimen/button_action_margins</item>
+    </style>
+
 </resources>
