Инициализировала активити с настройками. Передачу выбора темы ещё надо править.

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -16,14 +16,14 @@
     <com.google.android.material.button.MaterialButton
         style="@style/ButtonThemeStyle"
         android:id="@+id/button_theme_first"
-        android:text="@string/_first_theme"
+        android:text="@string/AppThemeLight"
         app:layout_constraintTop_toBottomOf="@id/guideline_settings"
         tools:ignore="MissingConstraints" />
 
     <com.google.android.material.button.MaterialButton
         style="@style/ButtonThemeStyle"
         android:id="@+id/button_theme_second"
-        android:text="@string/_second_theme"
+        android:text="@string/AppThemeDark"
         app:layout_constraintTop_toBottomOf="@id/button_theme_first"
         tools:ignore="MissingConstraints" />
 
