--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Calc" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="AppThemeDark" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -14,7 +14,13 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="ButtonStyle" parent="Theme.Calc">
+    <style name = "AppThemeLight" parent = "Theme.MaterialComponents.Light" >
+        <item name = "colorPrimary" >#EF4680</item >
+        <item name = "colorPrimaryDark" >#51021C</item >
+        <item name = "colorAccent" >#EDE5E7</item >
+    </style >
+
+    <style name="ButtonStyle" parent="AppThemeDark">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:textColor">#B19646</item>
@@ -36,7 +42,7 @@
         <item name="android:layout_marginBottom">@dimen/button_action_margins</item>
     </style>
 
-    <style name="ButtonSettingsStyle" parent="Theme.Calc">
+    <style name="ButtonSettingsStyle" parent="AppThemeDark">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:textColor">#B19646</item>
